clang/test/CIR/IR/invalid.cir
// Test attempts to build bogus CIR

// RUN: cir-tool -verify-diagnostics %s
module  {
  func @p0() {
    // expected-error@+1 {{'cir.cst' op nullptr expects pointer type}}
    %1 = cir.cst(nullptr) : i32
    cir.return
  }
}